--- a/sgim/templates/inventario/componentes.html
+++ b/sgim/templates/inventario/componentes.html
@@ -8,8 +8,10 @@
           <a class="active item" href="{% url 'componentes_list' %}">
             <i class=" cubes icon"></i> Componentes
           </a>
+           {% if perms.mantenimiento.add_componente %}   
           <a class=" blue item" href="{% url 'componente_add' %}">
             <i class=" add icon"></i> Agregar Componente
           </a>
+          {% endif %}
     </div>
 {% endblock contenido %}
