--- a/sgim/templates/inventario/servicios.html
+++ b/sgim/templates/inventario/servicios.html
@@ -8,8 +8,10 @@
           <a class="active item" href="{% url 'servicios_list' %}">
             <i class=" cubes icon"></i> Servicios
           </a>
+           {% if perms.mantenimiento.add_servicio %}   
           <a class=" blue item" href="{% url 'servicio_add' %}">
             <i class=" add icon"></i> Agregar Servicio
           </a>
+          {% endif %}
     </div>
 {% endblock contenido %}
